--- a/25-26.md
+++ b/25-26.md
@@ -40,3 +40,77 @@ Follow [Team Three](./t3.md) for more information.
 The most advanced training level, for teams already capable of solving olympiad problems. The focus is on mastery: learning advanced techniques, polishing solution writing to the highest standard, and developing stamina for multi-hour contests. Students are guided to think strategically about whole problem sets, manage time effectively, and present solutions at the level expected in international olympiads. T4 is the preparation ground for those aiming at the IMO level and beyond.
 
 Follow [Team Four](./t4.md) for more information.
+
+## B. Competitions & Awards
+
+🥇 **The MCC Championship**  
+Awarded to the **top 5 teams** with the highest average score across all weekly contests throughout the school year. This is the premier recognition of sustained teamwork, consistency, and excellence.  
+
+💯 **Top Perfect-Scorers**  
+Recognizes the **top 5 teams** that achieve the most perfect scores during the year. This award highlights accuracy, persistence, and mastery across contests.  
+
+❄ **Snowflake Cup** (just before Christmas)  
+“Every solution, like every snowflake, is unique.”  
+Recognizes the **top 5 teams/individuals** with the most elegant and well-written solutions, celebrating creativity and clarity in mathematical reasoning.  
+
+🥚 **The Mystical Egg** (just before Easter)  
+“Every problem hides a clever trick—can you find it?”  
+Recognizes the **top 5 teams/individuals** with outstanding performance on puzzle-style problems, rewarding ingenuity and outside-the-box thinking.  
+
+📜 **ICLT Achievement Certificates**  
+Granted to all students who successfully pass any **ICLT test**, serving as a personal mark of individual mastery and progress.  
+
+📖 **Pi Challenge (Monthly)**  
+From September onward, every MCC student receives **e-readership to *Pi Magazine***.  
+- Each month, students receive the translated **Pi problem-solving challenge** in English.  
+- Submissions must be written in English and sent both to *Pi Magazine* (for international recognition) and to MCC teachers (for record-keeping).  
+- Winners of the Pi Challenge will be formally announced in June.  
+This competition trains students to write polished, international-standard solutions.  
+
+🌍 **Purple Comet! Math Meet**  
+MCC teams participate in the international **Purple Comet! Math Meet** each April.  
+Top-performing MCC teams will be recognized publicly on [PurpleComet.org](https://purplecomet.org) for their international achievement.  
+
+🎁 **Special Recognition – “100 Problems for Absolute Beginners”**  
+Any **individual or team** that achieves **three perfect scores** across contests will receive a complimentary copy of *100 Problems for Absolute Beginners*, personally dedicated by the teacher.  
+This book may be kept or gifted to a friend — a lasting mark of problem-solving achievement.  
+
+
+## C. Competitions & Awards Timeline (2025–2026)
+
+📖 **September – June (Monthly)**  
+- **Pi Challenge (Pi Magazine)**  
+  Students receive and solve the monthly *Pi Magazine* problem set.  
+  Submissions in English to both *Pi* and MCC teachers.  
+  Winners announced in **June**.  
+
+🥇 **September – June (Throughout Year)**  
+- **MCC Championship & Top Perfect-Scorers**  
+  Every team test contributes to these year-long awards.  
+  Results tallied at the end of the school year.  
+
+❄ **December (just before Christmas)**  
+- **Snowflake Cup**  
+  Celebrates the most elegant and original solutions of the first semester.  
+
+🥚 **April (just before Easter)**  
+- **The Mystical Egg**  
+  Rewards ingenuity and clever tricks in problem solving.  
+
+🌍 **April**  
+- **Purple Comet! Math Meet**  
+  MCC teams compete internationally.  
+  Top teams recognized on PurpleComet.org.  
+
+📜 **June**  
+- **ICLT Achievement Certificates**  
+  Awarded to students who successfully pass any ICLT test.  
+
+🎁 **June**  
+- **Special Recognition**  
+  Any individual or team with **3 perfect scores** during the year  
+  receives a dedicated copy of *100 Problems for Absolute Beginners*.  
+
+🥇 **June**  
+- **MCC Championship & Top Perfect-Scorers Results Announced**  
+  End-of-year recognition for the best performing teams.  
