--- a/i2.md
+++ b/i2.md
@@ -1,3 +1,5 @@
+![Math Club & Competitions (MCC)](./img/MCC-2024-Logo-Large.png)
+
 # [I2 – Individual Track Level 2](#i2--individual-track-level-2)
 
 ## 1. What it is / Who it’s for  
