--- a/i1.md
+++ b/i1.md
@@ -1,3 +1,5 @@
+![Math Club & Competitions (MCC)](./img/MCC-2024-Logo-Large.png)
+
 # [I1 – Individual Track Level 1](#i1--individual-track-level-1)
 
 ## 1. What it is / Who it’s for  
