--- a/25-26.md
+++ b/25-26.md
@@ -1,5 +1,6 @@
+![Math Club & Competitions (MCC)](./img/MCC-2024-Logo-Large.png)
 
-# [The School Year 2025-2026()](#the-school-year-2025-2026)
+# [The School Year 2025-2026](#the-school-year-2025-2026)
 
 ## A. Individual Tracks
 
