--- a/25-26.md
+++ b/25-26.md
@@ -42,6 +42,8 @@ The most advanced training level, for teams already capable of solving olympiad 
 
 Follow [Team Four](./t4.md) for more information.
 
+&nbsp;
+
 ## B. Competitions & Awards
 
 🥇 **The MCC Championship**  
@@ -76,6 +78,7 @@ Top-performing MCC teams will be recognized publicly on [PurpleComet.org](https:
 Any **individual or team** that achieves **three perfect scores** across contests will receive a complimentary copy of *100 Problems for Absolute Beginners*, personally dedicated by the teacher.  
 This book may be kept or gifted to a friend — a lasting mark of problem-solving achievement.  
 
+&nbsp;
 
 ## C. Competitions & Awards Timeline (2025–2026)
 
@@ -115,3 +118,16 @@ This book may be kept or gifted to a friend — a lasting mark of problem-solvin
 🥇 **June**  
 - **MCC Championship & Top Perfect-Scorers Results Announced**  
   End-of-year recognition for the best performing teams.  
+
+&nbsp;
+
+## D. Membership Policy
+
+The annual memberhip is **the same across all groups (I1–2 and T1–4)**, and it is based on **last year’s academic performance**. Students who achieved **more than 75% last year are exempt from paying** regardless of whether they are now in I or T. This ensures **fairness and consistency**.
+
+Joining I or T is a **personal choice** and reflects each student’s **goals and level of commitment**. The I groups naturally have a **lighter workload**, while the T groups take on **more**. This is **not a reward or a penalty**, but simply a difference in participation. Importantly, **every student starts from I1 and then progresses step by step**. The learning path is the same for everyone, with the only difference being how far each student advances along it.
+
+This is a **club membership fee**, not tuition for I or T. It reflects **results from the previous year**, not the track chosen this year. For example, some students in I1 contribute **50%**, while others in T1 contribute **100%**. Therefore, it is not a matter of one group being treated better or worse than another.
+
+If the contribution creates **financial difficulty**, families may request a **reduction or waiver**. Finally, please remember that participation in the club is **entirely voluntary**. If the contribution or structure does not suit your family, you are **free not to continue**.
+
