fix schedule week 1

--- a/t2.md
+++ b/t2.md
@@ -39,11 +39,10 @@ T2 runs on a **repeating 2-week cycle**. Each cycle blends new learning with rev
   - Work on team assignments and submit by Sunday.  
 
   (from Cycle 2 onwards, i.e. starting Week 3)  
-  - Grading and feedback from the previous cycle’s test are shared (Monday–Thursday).  
+  - Monday: Official solutions of the assignment released.  
   - Official test solutions are released on Monday.  
+  - Grading and feedback from the previous cycle’s test are shared (Monday–Thursday).  
   - Selected teams prepare and present their solutions on Friday or Sunday.  
-  - Begin new material: study assigned theory and examples.  
-  - Work on team assignments and submit by Sunday.  
 
 - **Week 2**  
   - Monday: Official solutions of the assignment released.  
