--- a/t4.md
+++ b/t4.md
@@ -40,11 +40,10 @@ T4 runs on a **repeating 2-week cycle**, similar to T3, but with longer tests an
   - Work on team assignments and submit by Sunday.  
 
   (from Cycle 2 onwards, i.e. starting Week 3)  
-  - Grading and feedback from the previous cycle’s test are shared (Monday–Thursday).  
+  - Monday: Official solutions of the assignment released.  
   - Official test solutions are released on Monday.  
+  - Grading and feedback from the previous cycle’s test are shared (Monday–Thursday).  
   - Selected teams prepare and present their solutions on Friday or Sunday.  
-  - Begin new material: study assigned theory and examples.  
-  - Work on team assignments and submit by Sunday.  
 
 - **Week 2**  
   - Monday: Official solutions of the assignment released.  
