--- a/i1.md
+++ b/i1.md
@@ -46,8 +46,7 @@ See below for chapters targeted in I1, which correspond to **ICLT Levels 1–5**
   - Students select a level (L1–L5) to be assessed on.  
   - Two 90-minute tests over the first weekend (Saturday and Sunday):  
     + September 6 and September 7  
-  - Students register test times using this online form:  
-    [Registration for IC Assessment/Level Test](https://forms.gle/enEpBMuf6xjagpVj6)  
+  - Students register test level **before each test** using this form [Which IC Level do you want to attempt?](https://forms.gle/duVmcmaxzbcmZqr27) and registr test times **once for all the test** using this online form: [Registration for IC Assessment/Level Test](https://forms.gle/enEpBMuf6xjagpVj6)  
   - Purpose: to determine the correct starting level.  
 
 - **Bi-Monthly Level Tests (every 2 months):**  
