--- a/25-26.md
+++ b/25-26.md
@@ -1,8 +1,8 @@
-![Math Club & Competitions (MCC)](./img/MCC-25-26-OC-1.png)
-
-**Read the [Summary of School Programs](https://drive.google.com/file/d/1H0kACqZgDTLDe3hWgxSFv9U9aHrNVtHf/view?usp=sharing).**
+![Math Club & Competitions (MCC)](./img/MCC-2024-Logo-Large.png)
 
 # [The School Year 2025-2026](#the-school-year-2025-2026)
+
+**Read the [Summary of School Programs](https://drive.google.com/file/d/1H0kACqZgDTLDe3hWgxSFv9U9aHrNVtHf/view?usp=sharing).**
 
 ## A. Individual Tracks
 
