--- a/t2.md
+++ b/t2.md
@@ -58,7 +58,7 @@ Over **32 weeks (16 cycles)**, teams cover about 16 chapters of the curriculum.
 - **Team Tests**:  
   - 120 minutes, 4 problems.  
   - Register your test time here: [Registration for Team Tests](https://forms.gle/j4xapHha1oJiMviW9).  
-  - Taken bi-weekly on Saturday or Sunday.  
+  - Taken bi-weekly on Sunday.   
   - Test schedule available here: [Team Tracks (T1–2–3–4) – MCC 2025–2026 Calendar](https://calendar.google.com/calendar/u/0?cid=YTFjMTNlNGEyY2M3NjdjNGRlYjYzNTMwMTk4NzRlNmIwNDQxOGZjYTEzOWQ1ZTRiOWM5OGJjOWI3NWViMmFkMUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t).  
 
 - **Grading & Feedback**:  
