--- a/t2.md
+++ b/t2.md
@@ -42,12 +42,12 @@ T2 runs on a **repeating 2-week cycle**. Each cycle blends new learning with rev
   - Monday: Official solutions of the assignment released.  
   - Official test solutions are released on Monday.  
   - Grading and feedback from the previous cycle’s test are shared (Monday–Thursday).  
-  - Selected teams prepare and present their solutions on Friday or Sunday.  
+  - Selected teams prepare on Friday and present their solutions on Sunday.  
 
 - **Week 2**  
   - Monday: Official solutions of the assignment released.  
   - Teams carefully review solutions.  
-  - Saturday/Sunday: **Team Test** (4 problems, 120 minutes). One solution per problem is submitted jointly by the team.  
+  - Sunday: **Team Test** (4 problems, 120 minutes). One solution per problem is submitted jointly by the team.  
 
 Over **32 weeks (16 cycles)**, teams cover about 16 chapters of the curriculum.  
 
