--- a/t4.md
+++ b/t4.md
@@ -43,12 +43,12 @@ T4 runs on a **repeating 2-week cycle**, similar to T3, but with longer tests an
   - Monday: Official solutions of the assignment released.  
   - Official test solutions are released on Monday.  
   - Grading and feedback from the previous cycle’s test are shared (Monday–Thursday).  
-  - Selected teams prepare and present their solutions on Friday or Sunday.  
+  - Selected teams prepare on Friday and present their solutions on Sunday.  
 
 - **Week 2**  
   - Monday: Official solutions of the assignment released.  
   - Teams carefully review solutions.  
-  - Saturday/Sunday: **Team Test** (4 olympiad problems, 270 minutes). One rigorous solution per problem is submitted jointly by the team.  
+  - Sunday: **Team Test** (4 olympiad problems, 270 minutes). One rigorous solution per problem is submitted jointly by the team.  
 
 Over **32 weeks (16 cycles)**, teams complete 16 intensive units of olympiad-level preparation.  
 
