--- a/t4.md
+++ b/t4.md
@@ -37,7 +37,7 @@ T4 runs on a **repeating 2-week cycle**, similar to T3, but with longer tests an
 - **Week 1**  
   (from the very first cycle)  
   - Begin new material: study assigned theory and examples.  
-  - Work on team assignments and submit by Sunday.  
+  - Work on team assignments (Exercises 5-7) and submit by Sunday.  
 
   (from Cycle 2 onwards, i.e. starting Week 3)  
   - Monday: Official solutions of the assignment released.  
@@ -46,6 +46,7 @@ T4 runs on a **repeating 2-week cycle**, similar to T3, but with longer tests an
   - Selected teams prepare on Friday and present their solutions on Sunday.  
 
 - **Week 2**  
+  - Work on team assignments (Exercises 8-10) and submit by Sunday.  
   - Monday: Official solutions of the assignment released.  
   - Teams carefully review solutions.  
   - Sunday: **Team Test** (4 olympiad problems, 270 minutes). One rigorous solution per problem is submitted jointly by the team.  
