--- a/t2.md
+++ b/t2.md
@@ -36,7 +36,7 @@ T2 runs on a **repeating 2-week cycle**. Each cycle blends new learning with rev
 - **Week 1**  
   (from the very first cycle)  
   - Begin new material: study assigned theory and examples.  
-- Work on team assignments (Exercises 1-3) and submit by Sunday.  
+  - Work on **team assignments (Exercises 1-3) and submit by Sunday**.  
 
   (from Cycle 2 onwards, i.e. starting Week 3)  
   - Monday: Official solutions of the assignment released.  
@@ -45,7 +45,7 @@ T2 runs on a **repeating 2-week cycle**. Each cycle blends new learning with rev
   - Selected teams prepare on Friday and present their solutions on Sunday.  
 
 - **Week 2**  
-  - Work on team assignments (Exercises 4-6) and submit by Sunday.  
+  - Work on **team assignments (Exercises 4-6) and submit by Sunday.**  
   - Monday: Official solutions of the assignment released.  
   - Teams carefully review solutions.  
   - Sunday: **Team Test** (4 problems, 120 minutes). One solution per problem is submitted jointly by the team.  
